--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,25 @@ project(SP2023)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(main.cpp main.cpp)
+add_executable(abc.cpp abc.cpp)
 
-add_executable(Zmija KolokviumskiVlatce/Zmija.cpp)
+add_executable(Zmija Kolokviumski/Zmija.cpp)
+add_executable(PreureduvanjeNiza Kolokviumski/PreureduvanjeNiza.cpp)
+add_executable(OdzemiSamoglaski Kolokviumski/OdzemiSamoglaski.cpp)
+add_executable(SlicniBroevi Kolokviumski/SlicniBroevi.cpp)
+add_executable(Kontakti Kolokviumski/Kontakti.cpp)
+add_executable(TastaturaZadaca Kolokviumski/TastaturaZadaca.cpp)
+add_executable(MonotonaPodniza Kolokviumski/MonotonaPodniza.cpp)
+add_executable(NazabenaPodniza Kolokviumski/NazabenaPodniza.cpp)
+add_executable(MaxMinRedica Kolokviumski/MaxMinRedica.cpp)
+add_executable(asdfghjkl Kolokviumski/asdfghjkl.cpp)
+add_executable(RasteckiN Kolokviumski/RasteckiN.cpp)
+add_executable(PrvPogolemN Kolokviumski/PrvPogolemN.cpp)
+add_executable(Romb Kolokviumski/Romb.cpp)
+add_executable(Vojnik Kolokviumski/Vojnik.cpp)
+add_executable(Zelka Kolokviumski/Zelka.cpp)
+add_executable(RedKolonaPecatenje Kolokviumski/RedKolonaPecatenje.cpp)
+
 add_executable(IstiNizi B2BV2/Mario/IstiNizi.cpp)
 add_executable(RotacijaNiza B2BV2/Mario/RotacijaNiza.cpp)
 add_executable(CitajMatrica B2BV2/Mario/CitajMatrica.cpp)
@@ -77,6 +94,7 @@ add_executable(1va-D2 ZadaciZaVezbanje2Kolokvium/DopolnitelniZadaci/1va-D2.cpp)
 add_executable(2ra-D2 ZadaciZaVezbanje2Kolokvium/DopolnitelniZadaci/2ra-D2.cpp)
 add_executable(3ta-D2 ZadaciZaVezbanje2Kolokvium/DopolnitelniZadaci/3ta-D2.cpp)
 add_executable(4ta-D2 ZadaciZaVezbanje2Kolokvium/DopolnitelniZadaci/4ta-D2.cpp)
+add_executable(5ta-D2 ZadaciZaVezbanje2Kolokvium/DopolnitelniZadaci/5ta-D2.cpp)
 add_executable(6ta-D2 ZadaciZaVezbanje2Kolokvium/DopolnitelniZadaci/6ta-D2.cpp)
 add_executable(7ma-D2 ZadaciZaVezbanje2Kolokvium/DopolnitelniZadaci/7ma-D2.cpp)
 add_executable(8ma-D2 ZadaciZaVezbanje2Kolokvium/DopolnitelniZadaci/8ma-D2.cpp)
@@ -124,6 +142,8 @@ add_executable(AbsZadaca Laboratoriski/5_nedela/AbsZadaca.cpp)
 add_executable(Parovi Laboratoriski/5_nedela/Parovi.cpp)
 add_executable(LabsSreda1 Laboratoriski/5_nedela/LabsSreda1.cpp)
 add_executable(LabsSreda2 Laboratoriski/5_nedela/LabsSreda2.cpp)
+add_executable(Swap3broja Laboratoriski/5_nedela/Swap3broja.cpp)
+add_executable(OceniKolicnik Laboratoriski/5_nedela/OceniKolicnik.cpp)
 
 add_executable(OgledalnaNiza Laboratoriski/6_nedela/OgledalnaNiza.cpp)
 add_executable(ProsekCeni Laboratoriski/6_nedela/ProsekCeni.cpp)
@@ -136,6 +156,10 @@ add_executable(kTrampa Laboratoriski/6_nedela/kTrampa.cpp)
 add_executable(kElement Laboratoriski/6_nedela/kElement.cpp)
 add_executable(ZbirIndeks Laboratoriski/6_nedela/ZbirIndeks.cpp)
 add_executable(AbsolutnaRazlika Laboratoriski/6_nedela/AbsoultnaRazlika.cpp)
+add_executable(IndeksiSoI Laboratoriski/6_nedela/IndeksiSoI.cpp)
+add_executable(MinMaxNiza Laboratoriski/6_nedela/MinMaxNiza.cpp)
+add_executable(SwapMinMax Laboratoriski/6_nedela/SwapMinMax.cpp)
+add_executable(kElementFinta Laboratoriski/6_nedela/kElementFinta.cpp)
 
 add_executable(ParnaMatrica Laboratoriski/7_nedela/ParnaMatrica.cpp)
 add_executable(PodDijagonali Laboratoriski/7_nedela/PodDijagonali.cpp)
@@ -145,6 +169,15 @@ add_executable(DijagonalnoPecatenje Laboratoriski/7_nedela/DijagonalnoPecatenje.
 add_executable(NegativniMatrica Laboratoriski/7_nedela/NegativniiMatrica.cpp)
 add_executable(ZnakDijagonali Laboratoriski/7_nedela/ZnakDijagonali.cpp)
 add_executable(MinMaxNormalizacija Laboratoriski/7_nedela/MinMaxNormalizacija.cpp)
+add_executable(LetsGoChelsea Laboratoriski/7_nedela/LetsGoChelsea.cpp)
+add_executable(BrKoloni2 Laboratoriski/7_nedela/BrKoloni2.cpp)
+add_executable(DesnoOdDijagonala Laboratoriski/7_nedela/DesnoOdDijagonala.cpp)
+add_executable(ProsekSporednaDijagonala Laboratoriski/7_nedela/ProsekSporednaDijagonala.cpp)
+add_executable(SimetricnaMatrica Laboratoriski/7_nedela/SimetricnaMatrica.cpp)
+add_executable(SrednaVrednostProsek Laboratoriski/7_nedela/SrednaVrednostProsek.cpp)
+add_executable(MinMaxMatrica Laboratoriski/7_nedela/MinMaxMatrica.cpp)
+add_executable(ParenNeparenRed Laboratoriski/7_nedela/ParenNeparenRed.cpp)
+add_executable(MenenjeMatrica Laboratoriski/7_nedela/MenenjeMatrica.cpp)
 
 add_executable(KvoN Laboratoriski/8_nedela/KvoN.cpp)
 add_executable(SpojuvanjeNizi Laboratoriski/8_nedela/SpojuvanjeNizi.cpp)
@@ -153,12 +186,27 @@ add_executable(Zigazaga Laboratoriski/8_nedela/Zigazaga.cpp)
 add_executable(NeparniElementi Laboratoriski/8_nedela/NeparniElementi.cpp)
 add_executable(InteresenBroj Laboratoriski/8_nedela/InteresenBroj.cpp)
 add_executable(RasteckaNiza Laboratoriski/8_nedela/RasteckaNiza.cpp)
+add_executable(Zvezda Laboratoriski/8_nedela/Zvezda.cpp)
+add_executable(OpsegRekurzija Laboratoriski/8_nedela/OpsegRekurzija.cpp)
+add_executable(RekurzivniPalindromi Laboratoriski/8_nedela/RekurzivniPalindromi.cpp)
+add_executable(RasteckaRekurzija Laboratoriski/8_nedela/RasteckRekurzija.cpp)
+add_executable(TransformacijaRekurzija Laboratoriski/8_nedela/TransformacijRekurzija.cpp)
+add_executable(DellivRekurzija Laboratoriski/8_nedela/DellivRekurzija.cpp)
+add_executable(PalindromiCifri Laboratoriski/8_nedela/PalindromiCifri.cpp)
+add_executable(PokazuvackaEdna Laboratoriski/8_nedela/PokazuvackaEdna.cpp)
 
 add_executable(RelFreq Laboratoriski/9_nedela/RelFreq.cpp)
 add_executable(PodNiza Laboratoriski/9_nedela/PodNiza.cpp)
 add_executable(Pointers Laboratoriski/9_nedela/Pointers.cpp)
 add_executable(GolemiMali Laboratoriski/9_nedela/GolemiMali.cpp)
 add_executable(Pal Laboratoriski/9_nedela/Pal.cpp)
+
+
+add_executable(2niziTekst Laboratoriski/10_nedela/2niziTekst.cpp)
+add_executable(ZbirPomalOd5 Laboratoriski/10_nedela/ZbirPomalOd5.cpp)
+add_executable(DijagonaliKvadrat Laboratoriski/10_nedela/DijagonaliKvadrat.cpp)
+
+
 
 add_executable(HelloWorld Auditoriski/1/HelloWorld.cpp)
 add_executable(Aud1.1 Auditoriski/1/Aud1.1.cpp)
