--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,9 @@ project(SP2023)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(main.cpp main.cpp)
-add_executable(abc.cpp abc.cpp)
-
 add_executable(RekurzijaKolokvium Kolokviumski/Padnati/RekurzijaKolokvium.cpp)
 add_executable(PosledovatelenStr Kolokviumski/Padnati/PosledovatelenStr.cpp)
 add_executable(Matrica Kolokviumski/Padnati/Matrica.cpp)
-
 
 add_executable(Zmija Kolokviumski/Zmija.cpp)
 add_executable(PreureduvanjeNiza Kolokviumski/PreureduvanjeNiza.cpp)
@@ -28,29 +24,6 @@ add_executable(Vojnik Kolokviumski/Vojnik.cpp)
 add_executable(Zelka Kolokviumski/Zelka.cpp)
 add_executable(RedKolonaPecatenje Kolokviumski/RedKolonaPecatenje.cpp)
 add_executable(NajvekeKratenjeSamoglaski Kolokviumski/NajvekeKratenjeSamoglaski.cpp)
-
-add_executable(IstiNizi B2BV2/Mario/IstiNizi.cpp)
-add_executable(RotacijaNiza B2BV2/Mario/RotacijaNiza.cpp)
-add_executable(CitajMatrica B2BV2/Mario/CitajMatrica.cpp)
-add_executable(PolaPola B2BV2/Toni/PolaPola.cpp)
-add_executable(PovtoruvanjeBukva B2BV2/Toni/PovtoruvanjeBukva.cpp)
-add_executable(RelativnaFrekvencija B2BV2/Toni/RelativnaFrekvencija.cpp)
-add_executable(ZbirNiza B2BV2/Agon/ZbirNiza.cpp)
-add_executable(ZbirCifri B2BV2/Agon/ZbirCifri.cpp)
-add_executable(Fibonaci B2BV2/Agon/Fibonaci.cpp)
-add_executable(DecToBinKonverzija B2BV2/Agon/DecToBinKonverzija.cpp)
-add_executable(Dijagonali B2BV2/1denVezbi/Dijagonali.cpp)
-add_executable(Rekurzija B2BV2/1denVezbi/Rekurzija.cpp)
-add_executable(Stringovi B2BV2/1denVezbi/Stringovi.cpp)
-add_executable(LinearSearch B2BV2/Tamara/LinearSearch.cpp)
-add_executable(BinarySearch B2BV2/Tamara/BinarySearch.cpp)
-add_executable(BubbleSort B2BV2/Tamara/BubbleSort.cpp)
-add_executable(SelectionSort B2BV2/Tamara/SelectionSort.cpp)
-add_executable(InsertionSort B2BV2/Tamara/InsertionSort.cpp)
-add_executable(MartricaSort B2BV2/2denVezbi/MatricaSort.cpp)
-add_executable(NiziSortiranje B2BV2/2denVezbi/NiziSortiranje.cpp)
-add_executable(Pokazuvaci B2BV2/2denVezbi/Pokazuvaci.cpp)
-
 
 add_executable(Oktomvri Predavanja/Oktomvri.cpp)
 add_executable(Samoglaska Predavanja/Samoglaska.cpp)
@@ -378,24 +351,24 @@ add_executable(Aud10.8 Auditoriski/10/Aud10.8.cpp)
 add_executable(Domasno10.9 Auditoriski/10/Domasna10.9.cpp)
 
 
-add_executable(Z1 ZadackiFreeTime/Z1.cpp)
-add_executable(Z2 ZadackiFreeTime/Z2.cpp)
-add_executable(Z7 ZadackiFreeTime/Z7.cpp)
-add_executable(Z9 ZadackiFreeTime/Z9.cpp)
-add_executable(Z10 ZadackiFreeTime/Z10.cpp)
-add_executable(Matrica1 ZadackiFreeTime/Matrica1.cpp)
-add_executable(Matrica2 ZadackiFreeTime/Matrica2.cpp)
-add_executable(Matrica3 ZadackiFreeTime/Matrica3.cpp)
-add_executable(Matrica4 ZadackiFreeTime/Matrica4.cpp)
-add_executable(Elka ZadackiFreeTime/Elka.cpp)
-add_executable(Rekurzija1 ZadackiFreeTime/Rekurzija1.cpp)
-add_executable(Rekurzija2 ZadackiFreeTime/Rekurzija2.cpp)
-add_executable(Rekurzija3 ZadackiFreeTime/Rekurzija3.cpp)
-add_executable(Rekurzija4 ZadackiFreeTime/Rekurzija4.cpp)
-add_executable(Rekurzija5 ZadackiFreeTime/Rekurzija5.cpp)
-add_executable(Rekurzija6 ZadackiFreeTime/Rekurzija6.cpp)
-add_executable(Rekurzija7 ZadackiFreeTime/Rekurzija7.cpp)
-add_executable(Rekurzija8 ZadackiFreeTime/Rekurzija8.cpp)
-add_executable(Rekurzija9 ZadackiFreeTime/Rekurzija9.cpp)
+add_executable(Z1 Predavanja/Z1.cpp)
+add_executable(Z2 Predavanja/Z2.cpp)
+add_executable(Z7 Predavanja/Z7.cpp)
+add_executable(Z9 Predavanja/Z9.cpp)
+add_executable(Z10 Predavanja/Z10.cpp)
+add_executable(Matrica1 Predavanja/Matrica1.cpp)
+add_executable(Matrica2 Predavanja/Matrica2.cpp)
+add_executable(Matrica3 Predavanja/Matrica3.cpp)
+add_executable(Matrica4 Predavanja/Matrica4.cpp)
+add_executable(Elka Predavanja/Elka.cpp)
+add_executable(Rekurzija1 Predavanja/Rekurzija1.cpp)
+add_executable(Rekurzija2 Predavanja/Rekurzija2.cpp)
+add_executable(Rekurzija3 Predavanja/Rekurzija3.cpp)
+add_executable(Rekurzija4 Predavanja/Rekurzija4.cpp)
+add_executable(Rekurzija5 Predavanja/Rekurzija5.cpp)
+add_executable(Rekurzija6 Predavanja/Rekurzija6.cpp)
+add_executable(Rekurzija7 Predavanja/Rekurzija7.cpp)
+add_executable(Rekurzija8 Predavanja/Rekurzija8.cpp)
+add_executable(Rekurzija9 Predavanja/Rekurzija9.cpp)
 
 
