--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -209,19 +209,19 @@ add_executable(HelloWorld Auditoriski/1/HelloWorld.cpp)
 add_executable(Aud1.1 Auditoriski/1/Aud1.1.cpp)
 add_executable(Aud1.2 Auditoriski/1/Aud1.2.cpp)
 
-add_executable(KoordPravoagolnik RendomShit/KoordPravoagolnik.cpp)
-add_executable(Glusec RendomShit/Glusec.cpp)
-add_executable(FINKIPoker RendomShit/FINKIPoker.cpp)
-add_executable(ZnaciZadaca RendomShit/ZnaciZadaca.cpp)
-add_executable(Morze RendomShit/Morze.cpp)
-add_executable(Brojanica RendomShit/Brojanica.cpp)
-add_executable(SredenBroj RendomShit/SredenBroj.cpp)
-add_executable(SredenBroj2 RendomShit/SredenBroj2.cpp)
-add_executable(Kval1 RendomShit/Kval1.cpp)
-add_executable(Pikseli RendomShit/Pikseli.cpp)
-add_executable(Factoriel RendomShit/Factoriel.cpp)
-add_executable(BrDeliteliCifrBr RendomShit/BrDeliteliCifrBr.cpp)
-add_executable(PodredenBr RendomShit/PodredenBr.cpp)
+add_executable(KoordPravoagolnik Predavanja/RendomShit/KoordPravoagolnik.cpp)
+add_executable(Glusec Predavanja/RendomShit/Glusec.cpp)
+add_executable(FINKIPoker Predavanja/RendomShit/FINKIPoker.cpp)
+add_executable(ZnaciZadaca Predavanja/RendomShit/ZnaciZadaca.cpp)
+add_executable(Morze Predavanja/RendomShit/Morze.cpp)
+add_executable(Brojanica Predavanja/RendomShit/Brojanica.cpp)
+add_executable(SredenBroj Predavanja/RendomShit/SredenBroj.cpp)
+add_executable(SredenBroj2 Predavanja/RendomShit/SredenBroj2.cpp)
+add_executable(Kval1 Predavanja/RendomShit/Kval1.cpp)
+add_executable(Pikseli Predavanja/RendomShit/Pikseli.cpp)
+add_executable(Factoriel Predavanja/RendomShit/Factoriel.cpp)
+add_executable(BrDeliteliCifrBr Predavanja/RendomShit/BrDeliteliCifrBr.cpp)
+add_executable(PodredenBr Predavanja/RendomShit/PodredenBr.cpp)
 
 
 add_executable(Aud2.1 Auditoriski/2/Aud2.1.cpp)
